--- a/Bakery/Resources/Templates/MainWindowViewTemplates.xaml
+++ b/Bakery/Resources/Templates/MainWindowViewTemplates.xaml
@@ -11,7 +11,7 @@
 
     <!-- Добавление/редактирование спецификации продукта -->
     <DataTemplate
-        DataType="{x:Type viewmodels:ProdSpecsAddEditViewModel}">
+        DataType="{x:Type viewmodels:ProdSpecAddEditVM}">
         <views:ProdSpecsAddEditView/>
     </DataTemplate>
 
