--- a/Bakery/Views/Workspaces/ProdSpecsView.xaml
+++ b/Bakery/Views/Workspaces/ProdSpecsView.xaml
@@ -4,26 +4,39 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Bakery.Views.Workspaces"
-             xmlns:viewmodels="clr-namespace:Bakery.ViewModels"
-             xmlns:properties="clr-namespace:Bakery.Properties"
              mc:Ignorable="d">
     
-    <UserControl.DataContext>
-        <viewmodels:ProdSpecsVM/>
-    </UserControl.DataContext>
-
     <ScrollViewer>
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
+
+            <Border
+                Grid.Row="0"
+                BorderBrush="{StaticResource TextColor}"
+                Margin="10, 0"
+                BorderThickness="0,0,0,2.5">
+                <StackPanel
+                    Orientation="Horizontal">
+                    <Button
+                        Command="{Binding RefreshCommand}"
+                        Content="Обновить"
+                        Margin="0,0,5,0"
+                        VerticalAlignment="Center"/>
+                    <Button
+                        Command="{Binding AddCommand}"
+                        Content="Добавить"
+                        Margin="0,10,0,10"/>
+                </StackPanel>
+            </Border>
 
             <ItemsControl
                 ItemsSource="{Binding ProdSpecs}"
                 d:ItemsSource="{d:SampleData ItemCount=1}"
                 Margin="0,0,10,10"
-                Grid.Row="0">
+                Grid.Row="1">
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
                         <WrapPanel
@@ -35,7 +48,7 @@
                         <Border
                             BorderBrush="{StaticResource TextColor}"
                             BorderThickness="1"
-                            CornerRadius="5"
+                            CornerRadius="2.5"
                             Padding="10"
                             Margin="10,10,0,0"
                             Background="{StaticResource BackgroundColor}"
@@ -66,7 +79,7 @@
                                                          TargetNullValue={StaticResource NoPhoto}}"/>
                                 </Border>
 
-                                    
+
                                 <TextBlock
                                     Text="{Binding Title}"
                                     Grid.Column="1"
@@ -76,7 +89,7 @@
                                     FontSize="20"
                                     FontWeight="Bold"
                                     Margin="0,0,0,5"/>
-                                
+
                                 <TextBlock
                                     Text="{Binding Description,
                                                     Converter={StaticResource TextLengthConverter},
@@ -128,19 +141,6 @@
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
-
-            <Border
-                Grid.Row="1"
-                BorderBrush="{StaticResource TextColor}"
-                Margin="10, 0"
-                BorderThickness="0,2.5,0,0">
-                <Button
-                    Command="{Binding AddCommand}"
-                    Content="Добавить"
-                    HorizontalAlignment="Right"
-                    Margin="0,10,0,10"
-                    TextElement.FontSize="20"/>
-            </Border>
         </Grid>
     </ScrollViewer>
 </UserControl>
