--- a/Bakery/Views/Workspaces/MaterialSpecsView.xaml
+++ b/Bakery/Views/Workspaces/MaterialSpecsView.xaml
@@ -18,12 +18,18 @@
                 BorderBrush="{StaticResource TextColor}"
                 Margin="10, 0"
                 BorderThickness="0,0,0,2.5">
-                <Button
-                    Command="{Binding AddCommand}"
-                    Content="Добавить"
-                    HorizontalAlignment="Left"
-                    Margin="0,10,0,10"
-                    TextElement.FontSize="20"/>
+                <StackPanel
+                    Orientation="Horizontal">
+                    <Button
+                        Command="{Binding RefreshCommand}"
+                        Content="Обновить"
+                        Margin="0,0,5,0"
+                        VerticalAlignment="Center"/>
+                    <Button
+                        Command="{Binding AddCommand}"
+                        Content="Добавить"
+                        Margin="0,10,0,10"/>
+                </StackPanel>
             </Border>
 
             <ItemsControl
