--- a/Bakery/Views/Workspaces/ProdSpecAddEditView.xaml
+++ b/Bakery/Views/Workspaces/ProdSpecAddEditView.xaml
@@ -119,8 +119,8 @@
                                         <ComboBox
                                             ItemsSource="{Binding DataContext.AvailableMaterialSpecs,
                                                                   RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
+                                            SelectedItem="{Binding MaterialSpecification}"
                                             DisplayMemberPath="Title"
-                                            SelectedValuePath="Id"
                                             Grid.Column="0"
                                             Margin="0,0,5,0"/>
 
