--- a/Bakery/Views/Workspaces/ProdSpecsView.xaml
+++ b/Bakery/Views/Workspaces/ProdSpecsView.xaml
@@ -122,7 +122,7 @@
                                     Grid.Row="3">
                                     <TextBlock
                                         Text="{Binding Price,
-                                                    StringFormat={}# &#8381;}"
+                                                    StringFormat={}{0:f} &#8381;}"
                                         DockPanel.Dock="Left"
                                         FontSize="18"
                                         VerticalAlignment="Center"/>
