--- a/Bakery/Views/Workspaces/ProductionPlansView.xaml
+++ b/Bakery/Views/Workspaces/ProductionPlansView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Bakery.Views.Workspaces.MaterialsPurchasePlansView"
+﻿<UserControl x:Class="Bakery.Views.Workspaces.ProductionPlansView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -10,8 +10,8 @@
         <Grid>
             <Grid.Resources>
                 <CollectionViewSource
-                    x:Key="GroupedMaterialsPurchasePlans"
-                    Source="{Binding MaterialsPurchasePlans}">
+                    x:Key="GroupedProductionPlans"
+                    Source="{Binding ProductionPlans}">
                     <CollectionViewSource.GroupDescriptions>
                         <PropertyGroupDescription
                             PropertyName="PlanState.Title"/>
@@ -46,7 +46,7 @@
             </Border>
 
             <ItemsControl
-                ItemsSource="{Binding Source={StaticResource GroupedMaterialsPurchasePlans}}"
+                ItemsSource="{Binding Source={StaticResource GroupedProductionPlans}}"
                 d:ItemsSource="{d:SampleData ItemCount=1}"
                 Grid.Row="1"
                 Margin="10,0,10,0">
@@ -60,22 +60,11 @@
                             Padding="10"
                             Margin="25,10,0,0"
                             Background="{StaticResource BackgroundColor}">
-                            
-                            <StackPanel>
-                                <StackPanel.Resources>
-                                    <CollectionViewSource
-                                        x:Key="GroupedSupplierAndMaterialSpecifications"
-                                        Source="{Binding MaterialsPurchasePlan_SupplierAndMaterialSpecification}">
-                                        <CollectionViewSource.GroupDescriptions>
-                                            <PropertyGroupDescription
-                                                PropertyName="Supplier.Title"/>
-                                        </CollectionViewSource.GroupDescriptions>
-                                    </CollectionViewSource>
-                                </StackPanel.Resources>
 
+                            <StackPanel>
                                 <DockPanel>
                                     <TextBlock
-                                        Text="Перечень материалов:"
+                                        Text="Перечень продуктов:"
                                         FontSize="16"/>
                                     <TextBlock
                                         Text="{Binding DateTime, StringFormat={} К дате: {0:dd.MM.yyyy HH:mm}}"
@@ -84,14 +73,14 @@
                                 </DockPanel>
                                 
                                 <ItemsControl
-                                    ItemsSource="{Binding Source={StaticResource GroupedSupplierAndMaterialSpecifications}}">
+                                    ItemsSource="{Binding ProductionPlan_Product}">
 
                                     <ItemsControl.ItemsPanel>
                                         <ItemsPanelTemplate>
                                             <WrapPanel IsItemsHost="True"/>
                                         </ItemsPanelTemplate>
                                     </ItemsControl.ItemsPanel>
-                                            
+
                                     <ItemsControl.ItemTemplate>
                                         <DataTemplate>
                                             <Border
@@ -99,110 +88,58 @@
                                                 BorderThickness="1"
                                                 Padding="5"
                                                 Margin="10,10,0,0">
-                                                <StackPanel
-                                                    Orientation="Horizontal">
-                                                    <Rectangle
-                                                        Fill="{StaticResource TextColor}"
-                                                        Width="2.5"
-                                                        Margin="0,0,5,0"/>
-                                                    <StackPanel>
-                                                        <StackPanel
-                                                            Orientation="Horizontal">
-                                                            <TextBlock
-                                                                Text="{Binding MaterialSpecification.Title}"
-                                                                TextWrapping="Wrap"
-                                                                Margin="0,0,5,0"/>
-                                                            <TextBlock
-                                                                Text="{Binding Quantity}"
-                                                                Margin="0,0,5,0"/>
-                                                            <TextBlock
-                                                                Text="{Binding MaterialSpecification.MeasureUnit.Title}"
-                                                                Margin="0,0,5,0"/>
-                                                        </StackPanel>
-                                                        <StackPanel
-                                                            Orientation="Horizontal">
-                                                            <TextBlock
-                                                                Text="{Binding Price, StringFormat={}По цене {0:f} &#8381; за 1}"
-                                                                Margin="0,0,5,0"/>
-                                                            <TextBlock
-                                                                Text="{Binding MaterialSpecification.MeasureUnit.Title}"
-                                                                Margin="0,0,5,0"/>
-                                                        </StackPanel>
-                                                    </StackPanel>
-                                                </StackPanel>
+                                                <Grid>
+                                                    <Grid.RowDefinitions>
+                                                        <RowDefinition Height="*"/>
+                                                        <RowDefinition Height="Auto"/>
+                                                    </Grid.RowDefinitions>
+
+                                                    <Grid.ColumnDefinitions>
+                                                        <ColumnDefinition Width="Auto"/>
+                                                        <ColumnDefinition Width="Auto"/>
+                                                    </Grid.ColumnDefinitions>
+                                                    
+                                                    <Border
+                                                        Grid.RowSpan="2"
+                                                        Grid.Column="0"
+                                                        BorderBrush="{StaticResource TextColor}"
+                                                        BorderThickness="1"
+                                                        CornerRadius="2.5"
+                                                        Margin="0,0,10,0"
+                                                        MaxWidth="50">
+                                                        <Image
+                                                            Source="{Binding ProductSpecification.Photo,
+                                                                                TargetNullValue={StaticResource NoPhoto}}"/>
+                                                    </Border>
+                                                    
+                                                    <TextBlock
+                                                        Text="{Binding ProductSpecification.Title}"
+                                                        Grid.Row="0"
+                                                        Grid.Column="1"
+                                                        TextWrapping="Wrap"
+                                                        FontSize="16"
+                                                        FontWeight="Bold"
+                                                        Margin="0,0,0,5"/>
+                                                    
+                                                    <TextBlock
+                                                        Text="{Binding Quantity, StringFormat={}{0} ед.}"
+                                                        Grid.Row="1"
+                                                        Grid.Column="1"
+                                                        Margin="0,0,5,0"
+                                                        FontSize="16"
+                                                        HorizontalAlignment="Right"/>
+                                                </Grid>
                                             </Border>
                                         </DataTemplate>
                                     </ItemsControl.ItemTemplate>
-
-                                    <ItemsControl.GroupStyle>
-                                        <GroupStyle>
-                                            <GroupStyle.ContainerStyle>
-                                                <Style
-                                                    TargetType="GroupItem">
-                                                    <Setter
-                                                        Property="Margin"
-                                                        Value="0,10,0,0"/>
-                                                    <Setter
-                                                        Property="Template">
-                                                        <Setter.Value>
-                                                            <ControlTemplate
-                                                                TargetType="GroupItem">
-                                                                <Expander
-                                                                    IsExpanded="False"
-                                                                    Background="White"
-                                                                    Foreground="{StaticResource TextColor}"
-                                                                    Padding="10">
-                                                                    <Expander.Header>
-                                                                        <StackPanel
-                                                                            Orientation="Horizontal">
-                                                                            <TextBlock
-                                                                                Text="От поставщика"
-                                                                                FontWeight="Bold"
-                                                                                VerticalAlignment="Center"
-                                                                                Margin="0,0,10,0"/>
-                                                                            <Border
-                                                                                BorderBrush="{StaticResource TextColor}"
-                                                                                BorderThickness="1"
-                                                                                CornerRadius="2.5"
-                                                                                Padding="1.25"
-                                                                                Margin="0,0,10,0"
-                                                                                Background="{StaticResource AccentColor}">
-                                                                                <TextBlock
-                                                                                    Text="{Binding Name}"
-                                                                                    FontWeight="Bold"
-                                                                                    Foreground="{StaticResource TextColor}"/>
-                                                                            </Border>
-                                                                            <TextBlock
-                                                                                Text="—"
-                                                                                FontWeight="Bold"
-                                                                                VerticalAlignment="Center"
-                                                                                Margin="0,0,10,0"/>
-                                                        
-                                                                            <TextBlock
-                                                                                Text="{Binding ItemCount}"
-                                                                                FontWeight="Bold"
-                                                                                VerticalAlignment="Center"/>
-                                                                        </StackPanel>
-                                                                    </Expander.Header>
-                                                                    <Expander.Content>
-                                                                        <ItemsPresenter
-                                                                            Margin="15,-20,0,0"/>
-                                                                    </Expander.Content>
-                                                                </Expander>
-                                                            </ControlTemplate>
-                                                        </Setter.Value>
-                                                    </Setter>
-                                                </Style>
-                                            </GroupStyle.ContainerStyle>
-                                        </GroupStyle>
-                                    </ItemsControl.GroupStyle>
+                                    
                                 </ItemsControl>
 
                                 <DockPanel
                                     Margin="0,10,0,0">
                                     <TextBlock
-                                        Text="{Binding TotalPrice,
-                                                       StringFormat={}Итоговая стоимость закупки: {0:f} &#8381;}"
+                                        Text="{Binding TotalCount,
+                                                       StringFormat={}Итоговое количество продуктов: {0} ед.}"
                                         FontSize="16"
                                         FontWeight="Bold"/>
 
